Its almost done, the JS was running

--- a/index.html
+++ b/index.html
@@ -41,22 +41,11 @@
                     <button class="btn btn-reset">Reset Game</button>
                 </div>
             </div>
-            <div class="game-play">
-                <button class="btn-tic-tac-toe x">X</button>
-                <button class="btn-tic-tac-toe o">O</button>
-                <button class="btn-tic-tac-toe x">X</button>
-                <button class="btn-tic-tac-toe o">X</button>
-                <button class="btn-tic-tac-toe x"></button>
-                <button class="btn-tic-tac-toe o"></button>
-                <button class="btn-tic-tac-toe x"></button>
-                <button class="btn-tic-tac-toe o"></button>
-                <button class="btn-tic-tac-toe x"></button>
-            </div>
         </div>
     </div>
 
-    <script src="/tic-tac-toe.js"></script>
-    <script src="/main.js"></script>
+    <script src="./tic-tac-toe.js"></script>
+    <script src="./main.js"></script>
 
 
 </body>
